[build-system]
requires = ["setuptools>=45", "setuptools-scm>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pantheraml_zoo"
version = "2025.6.8"
description = "PantheraML Zoo - Production-ready multi-GPU/TPU training utilities with monitoring, error handling, and performance optimization"
readme = "README.md"
requires-python = ">=3.9,<3.13"
license = "LGPL-3.0-or-later"
keywords = ["ai", "llm", "training", "multi-gpu", "tpu", "distributed", "production", "monitoring"]
authors = [
    {email = "info@unsloth.ai"},
    {name = "Unsloth AI team"},
]
maintainers = [
    {name = "Daniel Han", email = "danielhanchen@gmail.com"},
    {name = "Michael Han", email = "info@unsloth.ai"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "torch<=2.7.0",
    "triton ; platform_system == 'Linux'",
    "triton_windows ; platform_system == 'Windows'",
    "packaging>=24.1",
    "tyro",
    "transformers>=4.51.3,!=4.47.0,!=4.52.0,!=4.52.1,!=4.52.2,!=4.52.3",
    "datasets>=3.4.1",
    "sentencepiece>=0.2.0",
    "tqdm",
    "psutil",
    "wheel>=0.42.0",
    "numpy",
    "accelerate>=0.34.1",
    "trl>=0.7.9,!=0.9.0,!=0.9.1,!=0.9.2,!=0.9.3,!=0.15.0",
    "peft>=0.7.1,!=0.11.0",
    "protobuf<4.0.0",
    "huggingface_hub >= 0.30.0",
    "hf_transfer",
    "cut_cross_entropy",
    "pillow",
    "regex",
    "msgspec",
    # Multi-GPU and TPU support (optional)
    "torch_xla ; extra == 'tpu'",
]

[project.optional-dependencies]
tpu = [
    "torch_xla>=2.1.0",
    "cloud-tpu-client",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
    "mypy",
    "pre-commit",
]
all = [
    "unsloth_zoo[tpu,dev]",
]

[tool.setuptools.dynamic]
[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
exclude = ["images*", "tests*"]

[project.urls]
homepage = "http://www.unsloth.ai"
documentation = "https://github.com/unslothai/unsloth"
repository = "https://github.com/PantheraAIML/PantheraML-Zoo"
